--- a/brak/index.html
+++ b/brak/index.html
@@ -87,9 +87,8 @@
             </p>
             <p style="font-size:0.8em">
             If you have any
-            comments or (especially) photos please contact <a
-                href="mailto:nclisby@swin.edu.au">Nathan Clisby
-                (nclisby@swin.edu.au))</a>.
+            comments or (especially) photos please contact Nathan Clisby at <a
+                href="mailto:nclisby@swin.edu.au"> nclisby@swin.edu.au</a>
             </p>
             </div> <!-- content -->
         </div> <!-- contentblock -->
