--- a/brak/index.html
+++ b/brak/index.html
@@ -40,7 +40,7 @@
             Speakers and schedule to be added.
             </p>
             <p>
-            Prior to the date of the symposium will add some photos and
+            Prior to the date of the symposium we will add some photos and
             biographical details to celebrate Richard, his research contributions,
             and his contributions to the lattice statistical mechanics
             community and the mathematical physics community (ANZAMP) more
