Added confirmed speakers to Brak website

--- a/brak/index.html
+++ b/brak/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Richard Brak Memorial Symposium</title>
+    <meta charset="utf-8">
     <link rel="canonical" href="/" />
     <meta name="description" content="Homepage of memorial symposium for Richard Brak 2022."> 
     <link rel="stylesheet" type="text/css" href="css/brak.css">
@@ -37,7 +38,13 @@
             dear friend and colleague Richard Brak.
             </p>
             <p>
-            Speakers and schedule to be added.
+            Confirmed speakers include: 
+            Mireille Bousquet-Mélou, Thomas Prellberg, Stu Whittington, Buks
+            Janse van Rensburg, Andrew Rechnitzer, Chris Soteros, Gary Iliev, 
+            Judy-anne Osborn, Nick Beaton, Jan de Gier, Tony Guttmann, and Aleks Owczarek.
+            </p>
+            <p>
+            The program will be added shortly.
             </p>
             <p>
             Prior to the date of the symposium we will add some photos and
@@ -53,6 +60,16 @@
                 href="http://findingstones.com/">http://findingstones.com/</a>
             for some renderings.
             </p>
+            <p>
+            Note that there will be <a href="https://sites.google.com/view/omar-foda-workshop/home">memorial workshop</a> for Omar
+            Foda to be held at the University of Melbourne on the following day,
+            that is 8 February, 2022.
+            </p>
+            <p>
+            And, the annual ANZAMP Meeting will be held at Monash University
+            from 9-11 February, 2022.
+            </p>
+
 <br/>
 <h3>Organisers</h3>
 <ul>
