Added photos and program

--- a/brak/index.html
+++ b/brak/index.html
@@ -16,7 +16,6 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 
-
 <body>
     <div id="topwrapper">
         <div id="topbar">
@@ -27,27 +26,45 @@
                 <h1 style="display:inline-block;line-height:1.0em;margin-bottom:-0.3em;">
                     A Tour of Combinatorics and Statistical Mechanics: In Memory of Richard Brak
                 </h1>
-                <p>
                 <div class="image">
                 <img src="images/RichardBrak.jpg" alt="Richard Brak" width="27%"
                 style="float:right;min-width:100px;margin: 10px 0px 0px
                 10px" />
-            </div>
+                </div>
 
+
+                <div>
+                    <h3>
+                        <a href="register">Register</a>
+                        &nbsp;&nbsp;
+                        &nbsp;&nbsp;
+                        <a href="program">Program</a>
+                        &nbsp;&nbsp;
+                        &nbsp;&nbsp;
+                        <a href="photos">Photos</a>
+                    </h3>
+                </div>
+            <p>
             On 7 February, 2022 we will be holding a symposium in memory of our
             dear friend and colleague Richard Brak.
             </p>
             <p>
-            Confirmed speakers include: 
+            Confirmed speakers: 
             Mireille Bousquet-Mélou, Thomas Prellberg, Stu Whittington, Buks
             Janse van Rensburg, Andrew Rechnitzer, Chris Soteros, Gary Iliev, 
-            Judy-anne Osborn, Nick Beaton, Jan de Gier, Tony Guttmann, and Aleks Owczarek.
+            Judy-anne Osborn, Nick Beaton, Jan de Gier, Tony Guttmann, Iwan
+            Jensen, and Aleks Owczarek.
             </p>
             <p>
-            The program will be added shortly.
+            <b>Registration is now open!</b> Please visit the <a
+                href="register">registration</a> page.
             </p>
             <p>
-            Prior to the date of the symposium we will add some photos and
+            The provisional <a href="program">program</a> is now available.
+            </p>
+            <p>
+            Prior to the date of the symposium we will add some <a
+                href="photos">photos</a> and
             biographical details to celebrate Richard, his research contributions,
             and his contributions to the lattice statistical mechanics
             community and the mathematical physics community (ANZAMP) more
@@ -66,7 +83,9 @@
             that is 8 February, 2022.
             </p>
             <p>
-            And, the annual ANZAMP Meeting will be held at Monash University
+            And, the annual <a
+                href="https://www.anzamp.org.au/meetings/2022-2/">ANZAMP
+                Meeting</a> will be held at Monash University
             from 9-11 February, 2022.
             </p>
 
