--- a/brak/register/index.html
+++ b/brak/register/index.html
@@ -28,6 +28,11 @@
                     Registration for A Tour of Combinatorics and Statistical Mechanics: In Memory of Richard Brak
                 </h1>
 
+                <div>
+                    <h3>
+                        <a href="../">Homepage</a>
+                    </h3>
+                </div>
             <p>
             Please use the registration form below to indicate whether you will
             be participating face-to-face or virtually.
@@ -37,9 +42,6 @@
             symposium website. You are welcome to add this message, or edit your
             message,
             anytime up until Friday, 4 February.
-            </p>
-            <p>
-            Return to the homepage <a href="../">here</a>.
             </p>
             <br />
             <br />
