--- a/brak/index.html
+++ b/brak/index.html
@@ -57,7 +57,7 @@
             </p>
             <p>
             <b>Registration is now open!</b> Please visit the <a
-                href="register">registration</a> page.
+                href="register">registration</a> page to register.
             </p>
             <p>
             The provisional <a href="program">program</a> is now available.
