--- a/brak/register/index.html
+++ b/brak/register/index.html
@@ -43,6 +43,11 @@
             message,
             anytime up until Friday, 4 February.
             </p>
+            <!-- <p> -->
+            <!-- Note: depending on how things develop with respect to the Omicron -->
+            <!-- variant of COVID, it may be necessary to switch to an online only -->
+            <!-- format. --> 
+            <!-- </p> -->
             <br />
             <br />
             <iframe
