removed table for photos - better on phones this way

--- a/brak/photos/index.html
+++ b/brak/photos/index.html
@@ -67,9 +67,84 @@
             <!--     <br /> -->
 
 
-            <table>
-                <tr>
-                    <td>
+            <!-- <table> -->
+            <!--     <tr> -->
+            <!--         <td> -->
+            <!--             <figure> -->
+            <!--             <a href="../images/RichardBrak2001_P0000394.jpg"> -->
+            <!--             <img src="../images/RichardBrak2001_P0000394.jpg" alt="Richard Brak" -->
+            <!--             width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" /> -->
+            <!--             </a> -->
+            <!--             <figcaption> --> 
+            <!-- Source: CMS Summer Meeting 2001, photo by Ward Wurtz. -->            
+            <!--             </figcaption> -->
+            <!--             </figure> -->
+            <!--         </td> -->
+            <!--         <td> -->
+            <!--             <figure> -->
+            <!--             <a href="../images/RichardBrakBuksJanseVanRensburgAleksOwczarek2001.jpg"> -->
+            <!--             <img src="../images/RichardBrakBuksJanseVanRensburgAleksOwczarek2001.jpg" alt="Richard Brak" -->
+            <!--             width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" /> -->
+            <!--             </a> -->
+            <!--             <figcaption> --> 
+            <!-- Source: CMS Summer Meeting 2001, photo by Ward Wurtz. -->            
+            <!--             </figcaption> -->
+            <!--             </figure> -->
+            <!--         </td> -->
+            <!--     </tr> -->
+            <!--     <tr> -->
+            <!--         <td> -->
+            <!--             <figure> -->
+            <!--             <a href="../images/2005_DunkIsland_RichardBrak.jpg"> -->
+            <!--             <img src="../images/2005_DunkIsland_RichardBrak.jpg" alt="Richard Brak" -->
+            <!--             width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" /> -->
+            <!--             </a> -->
+            <!--             <figcaption> --> 
+            <!--             Source: Guttmannfest at Dunk Island 2005, photo by Buks -->
+            <!--             Janse van Rensburg. -->
+            <!--             </figcaption> -->
+            <!--             </figure> -->
+            <!--         </td> -->
+            <!--         <td> -->
+            <!--             <figure> -->
+            <!--             <a href="../images/2005_DunkIsland_ChrisSoteros_RichardBrak.jpg"> -->
+            <!--             <img src="../images/2005_DunkIsland_ChrisSoteros_RichardBrak.jpg" alt="Richard Brak" -->
+            <!--             width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" /> -->
+            <!--             </a> -->
+            <!--             <figcaption> --> 
+            <!--             Source: Guttmannfest at Dunk Island 2005, photo by Buks -->
+            <!--             Janse van Rensburg. -->
+            <!--             </figcaption> -->
+            <!--             </figure> -->
+            <!--         </td> -->
+            <!--     </tr> -->
+            <!--     <tr> -->
+            <!--         <td> -->
+            <!--             <figure> -->
+            <!--             <a href="../images/Sumners2007GroupPhoto.png"> -->
+            <!--             <img src="../images/Sumners2007GroupPhoto.png" alt="Richard Brak" -->
+            <!--             width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" /> -->
+            <!--             </a> -->
+            <!--             <figcaption> --> 
+            <!--             Source: Stu Whittington. -->
+            <!--             </figcaption> -->
+            <!--             </figure> -->
+            <!--         </td> -->
+            <!--         <td> -->
+            <!--             <figure> -->
+            <!--             <a href="../images/Sumners2007GroupPhotoB.png" target="_blank"><img src="../images/Sumners2007GroupPhotoB.png" alt="Richard Brak" -->
+            <!--             width="100%" style="min-width:200px;margin: 10px 10px -->
+            <!--             10px 10px" /> -->
+            <!--             </a> -->
+            <!--             <figcaption> --> 
+            <!--             Source: Stu Whittington. -->
+            <!--             </figcaption> -->
+            <!--             </figure> -->
+            <!--         </td> -->
+            <!--     </tr> -->
+            <!-- </table> -->
+
+
                         <figure>
                         <a href="../images/RichardBrak2001_P0000394.jpg">
                         <img src="../images/RichardBrak2001_P0000394.jpg" alt="Richard Brak"
@@ -79,8 +154,7 @@
             Source: CMS Summer Meeting 2001, photo by Ward Wurtz.            
                         </figcaption>
                         </figure>
-                    </td>
-                    <td>
+
                         <figure>
                         <a href="../images/RichardBrakBuksJanseVanRensburgAleksOwczarek2001.jpg">
                         <img src="../images/RichardBrakBuksJanseVanRensburgAleksOwczarek2001.jpg" alt="Richard Brak"
@@ -90,10 +164,7 @@
             Source: CMS Summer Meeting 2001, photo by Ward Wurtz.            
                         </figcaption>
                         </figure>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
+
                         <figure>
                         <a href="../images/2005_DunkIsland_RichardBrak.jpg">
                         <img src="../images/2005_DunkIsland_RichardBrak.jpg" alt="Richard Brak"
@@ -104,8 +175,7 @@
                         Janse van Rensburg.
                         </figcaption>
                         </figure>
-                    </td>
-                    <td>
+
                         <figure>
                         <a href="../images/2005_DunkIsland_ChrisSoteros_RichardBrak.jpg">
                         <img src="../images/2005_DunkIsland_ChrisSoteros_RichardBrak.jpg" alt="Richard Brak"
@@ -116,10 +186,7 @@
                         Janse van Rensburg.
                         </figcaption>
                         </figure>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
+
                         <figure>
                         <a href="../images/Sumners2007GroupPhoto.png">
                         <img src="../images/Sumners2007GroupPhoto.png" alt="Richard Brak"
@@ -129,8 +196,7 @@
                         Source: Stu Whittington.
                         </figcaption>
                         </figure>
-                    </td>
-                    <td>
+
                         <figure>
                         <a href="../images/Sumners2007GroupPhotoB.png" target="_blank"><img src="../images/Sumners2007GroupPhotoB.png" alt="Richard Brak"
                         width="100%" style="min-width:200px;margin: 10px 10px
@@ -140,9 +206,6 @@
                         Source: Stu Whittington.
                         </figcaption>
                         </figure>
-                    </td>
-                </tr>
-            </table>
 
             <br />
             <br />
