changed menu links (better for phones)

--- a/brak/index.html
+++ b/brak/index.html
@@ -33,18 +33,24 @@
                 10px" />
                 </div>
 
-
-                <div>
+                <table width=60%>
+                    <td>
                     <h3>
                         <a href="register">Register</a>
-                        &nbsp;&nbsp;
-                        &nbsp;&nbsp;
+                    </h3>
+                    </td>
+                    <td>
+                    <h3>
                         <a href="program">Program</a>
-                        &nbsp;&nbsp;
-                        &nbsp;&nbsp;
+                    </h3>
+                    </td>
+                    <td>
+                    <h3>
                         <a href="photos">Photos</a>
                     </h3>
-                </div>
+                    </td>
+                </table>
+
             <p>
             On 7 February, 2022 we will be holding a symposium in memory of our
             dear friend and colleague Richard Brak.
