restored menu links

--- a/brak/index.html
+++ b/brak/index.html
@@ -33,23 +33,36 @@
                 10px" />
                 </div>
 
-                <table width=60%>
-                    <td>
+                <div>
                     <h3>
                         <a href="register">Register</a>
-                    </h3>
-                    </td>
-                    <td>
-                    <h3>
+                        &nbsp;&nbsp;
+                        &nbsp;&nbsp;
                         <a href="program">Program</a>
-                    </h3>
-                    </td>
-                    <td>
-                    <h3>
+                        &nbsp;&nbsp;
+                        &nbsp;&nbsp;
                         <a href="photos">Photos</a>
                     </h3>
-                    </td>
-                </table>
+                </div>
+
+                <!-- Doesn't wrap on mobile. Using spaces is ugly, but oh well. -->
+                <!-- <table width=60%> -->
+                <!--     <td> -->
+                <!--     <h3> -->
+                <!--         <a href="register">Register</a> -->
+                <!--     </h3> -->
+                <!--     </td> -->
+                <!--     <td> -->
+                <!--     <h3> -->
+                <!--         <a href="program">Program</a> -->
+                <!--     </h3> -->
+                <!--     </td> -->
+                <!--     <td> -->
+                <!--     <h3> -->
+                <!--         <a href="photos">Photos</a> -->
+                <!--     </h3> -->
+                <!--     </td> -->
+                <!-- </table> -->
 
             <p>
             On 7 February, 2022 we will be holding a symposium in memory of our
