restored menu links

--- a/brak/index.html
+++ b/brak/index.html
@@ -47,6 +47,7 @@
 
                 <!-- Doesn't wrap on mobile. Using spaces is ugly, but oh well. -->
                 <!-- <table width=60%> -->
+                <!-- <table> -->
                 <!--     <td> -->
                 <!--     <h3> -->
                 <!--         <a href="register">Register</a> -->
