improved program functionality for mobile

--- a/brak/program/index.html
+++ b/brak/program/index.html
@@ -20,6 +20,7 @@
             width: 100%;
         }
     </style>
+
 </head>
 
 <script src="../toggle.js" type="text/javascript"></script>
@@ -62,6 +63,7 @@
             </p>
 
             
+            <div class="desktop">
                     <!-- <td style="width:15em"> 8:15am</td> -->
             <table>
                 <tr bgcolor="#E0E0E0">
@@ -286,6 +288,266 @@
                     <td colspan="2"> Closing remarks</td>
                 </tr>
             </table>
+        </div> <!-- desktop -->
+
+
+            
+            <div class="mobile">
+                    <!-- <td style="width:15em"> 8:15am</td> -->
+            <table>
+                <tr bgcolor="#E0E0E0">
+                    <td style="text-align:right;width:70px;">8:15am</td>
+                    <td style="width:220px;"> Welcome</td>
+                </tr>
+                <tr> <td colspan="2">&nbsp;</td> </tr>
+                <tr>
+                    <td style="text-align:right">8:30am</td>
+                    <td>Mireille Bousquet-Mélou</td>
+                </tr>
+                <tr>
+                    <td  colspan="2"><em> 
+                            <!-- <a href="javascript: void(0);" onclick="toggle('abstract0')"> -->
+                                TBA
+                            <!-- </a> --> 
+                    </em></td>
+                </tr>
+                <!-- <tr> -->
+                <!--     <td  colspan="2"><abstract id="abstract0" style="display:none;"> Abstract</abstract></td> -->
+                <!-- </tr> -->
+                <tr> <td colspan="2">&nbsp;</td> </tr>
+                <tr>
+                    <td style="text-align:right">9:00am</td>
+                    <td>Thomas Prellberg</td>
+                </tr>
+                <tr>
+                    <td  colspan="2"><em> 
+                            <!-- <a href="javascript: void(0);" onclick="toggle('abstract1')"> -->
+                                TBA
+                            <!-- </a> --> 
+                    </em></td>
+                </tr>
+                <!-- <tr> -->
+                <!--     <td  colspan="2"><abstract id="abstract1" style="display:none;"> Abstract</abstract></td> -->
+                <!-- </tr> -->
+                <tr> <td colspan="2">&nbsp;</td> </tr>
+                <tr>
+                    <td style="text-align:right">9:30am</td>
+                    <td>Stuart Whittington</td>
+                </tr>
+                <tr>
+                    <td  colspan="2"><em> 
+                            <a href="javascript: void(0);" onclick="toggle('abstract996')">
+                                Self-avoiding walks interacting with a surface and subject to a force
+                            </a> 
+                    </em></td>
+                </tr>
+                <tr>
+                    <td  colspan="2"><abstract id="abstract996" style="display:none;">
+                        Self-avoiding walks interacting with a surface
+                        constitute a useful model of polymer adsorption. We
+                        present some rigorous results about self-avoiding walks
+                        interacting with a surface and subject to a force that
+                        can desorb the walk. We give results about the free
+                        energy that establish the form of the phase diagram,
+                        and extend this to the cases of uniform stars and
+                        uniform combs. This is joint work with Buks van
+                        Rensburg.
+                        </abstract></td>
+                </tr>
+                <tr> <td colspan="2">&nbsp;</td> </tr>
+                <tr>
+                    <td style="text-align:right">10:00am</td>
+                    <td>E. J. Janse van Rensburg</td>
+                </tr>
+                <tr>
+                    <td  colspan="2"><em> 
+                            <a href="javascript: void(0);" onclick="toggle('abstract992')">
+                                Pulling spiders
+                            </a> 
+                    </em></td>
+                </tr>
+                <tr>
+                    <td  colspan="2"><abstract id="abstract992" style="display:none;">
+                        In this talk I give a brief overview of some basic methods for obtaining free energies of cubic lattice models of adsorbing and pulled polymers in terms of the free energies of adsorbing and pulled self-avoiding walks.  In addition to pulling adsorbing spiders (these are models of adsorbing star polymers pulled in their central node, and with legs intersecting the adsorbing plane), I will also briefly look at the free energies of other models.  The phase diagrams of some of the models will also be discussed. This work was done jointly with Stu Whittington, and with Chris Soteros.
+                        </abstract></td>
+                </tr>
+                <tr> <td colspan="2">&nbsp;</td> </tr>
+                <tr bgcolor="#E0E0E0">
+                    <td  style="text-align:right">10:30am</td>
+                    <td colspan="1"> Morning tea</td>
+                </tr>
+                <tr> <td colspan="2">&nbsp;</td> </tr>
+                <tr>
+                    <td style="text-align:right">11:00am</td>
+                    <td>Gary Iliev</td>
+                </tr>
+                <tr>
+                    <td  colspan="2"><em> 
+                            <!-- <a href="javascript: void(0);" onclick="toggle('abstract3')"> -->
+                                TBA
+                            <!-- </a> --> 
+                    </em></td>
+                </tr>
+                <!-- <tr> -->
+                <!--     <td  colspan="2"><abstract id="abstract3" style="display:none;"> Abstract</abstract></td> -->
+                <!-- </tr> -->
+                <tr> <td colspan="2">&nbsp;</td> </tr>
+                <tr>
+                    <td style="text-align:right">11:30am</td>
+                    <td>Chris Soteros</td>
+                </tr>
+                <tr>
+                    <td  colspan="2"><em> 
+                            <!-- <a href="javascript: void(0);" onclick="toggle('abstract4')"> -->
+                                TBA
+                            <!-- </a> --> 
+                    </em></td>
+                </tr>
+                <!-- <tr> -->
+                <!--     <td  colspan="2"><abstract id="abstract4" style="display:none;"> Abstract</abstract></td> -->
+                <!-- </tr> -->
+                <tr> <td colspan="2">&nbsp;</td> </tr>
+                <tr>
+                    <td style="text-align:right">12:00pm</td>
+                    <td>Andrew Rechnitzer</td>
+                </tr>
+                <tr>
+                    <td  colspan="2"><em> 
+                            <!-- <a href="javascript: void(0);" onclick="toggle('abstract5')"> -->
+                                TBA
+                            <!-- </a> --> 
+                    </em></td>
+                </tr>
+                <!-- <tr> -->
+                <!--     <td  colspan="2"><abstract id="abstract5" style="display:none;"> Abstract</abstract></td> -->
+                <!-- </tr> -->
+                <tr> <td colspan="2">&nbsp;</td> </tr>
+                <tr bgcolor="#E0E0E0">
+                    <td  style="text-align:right">12:30pm</td>
+                    <td colspan="1"> Lunch</td>
+                </tr>
+                <tr> <td colspan="2">&nbsp;</td> </tr>
+                <tr>
+                    <td style="text-align:right">1:30pm</td>
+                    <td>Judy-anne Osborn</td>
+                </tr>
+                <tr>
+                    <td  colspan="2"><em> 
+                            <!-- <a href="javascript: void(0);" onclick="toggle('abstract7')"> -->
+                                TBA
+                            <!-- </a> --> 
+                    </em></td>
+                </tr>
+                <!-- <tr> -->
+                <!--     <td  colspan="2"><abstract id="abstract7" style="display:none;"> Abstract</abstract></td> -->
+                <!-- </tr> -->
+                <tr> <td colspan="2">&nbsp;</td> </tr>
+                <tr>
+                    <td style="text-align:right">2:00pm</td>
+                    <td>Tony Guttmann</td>
+                </tr>
+                <tr>
+                    <td  colspan="2"><em> 
+                            <a href="javascript: void(0);" onclick="toggle('abstract998')">
+                                Spiral walks on the triangular lattice
+                            </a> 
+                    </em></td>
+                </tr>
+                <tr>
+                    <td  colspan="2"><abstract id="abstract998" style="display:none;">
+                        One of the problems Richard worked on for his PhD was
+                        that of spiral SAWs on the triangular lattice.  At
+                        around the same time I was working on an extension of
+                        this problem in collaboration with George Szekeres, and
+                        I will describe these problems.
+                        </abstract></td>
+                </tr>
+                <tr> <td colspan="2">&nbsp;</td> </tr>
+                <tr>
+                    <td style="text-align:right">2:30pm</td>
+                    <td>Iwan Jensen</td>
+                </tr>
+                <tr>
+                    <td  colspan="2"><em> 
+                            <!-- <a href="javascript: void(0);" onclick="toggle('abstract9')"> -->
+                                TBA
+                            <!-- </a> --> 
+                    </em></td>
+                </tr>
+                <tr> <td colspan="2">&nbsp;</td> </tr>
+                <tr bgcolor="#E0E0E0">
+                    <td  style="text-align:right">3:00pm</td>
+                    <td colspan="1"> Afternoon tea</td>
+                </tr>
+                <!-- <tr> -->
+                <!--     <td></td> -->
+                <!--     <td  colspan="2"><abstract id="abstract9" style="display:none;"> Abstract</abstract></td> -->
+                <!-- </tr> -->
+                <tr> <td colspan="2">&nbsp;</td> </tr>
+                <tr>
+                    <td style="text-align:right">3:30pm</td>
+                    <td>Aleks Owczarek</td>
+                </tr>
+                <tr>
+                    <td  colspan="2"><em> 
+                            <!-- <a href="javascript: void(0);" onclick="toggle('abstract10')"> -->
+                                TBA
+                            <!-- </a> --> 
+                    </em></td>
+                </tr>
+                <!-- <tr> -->
+                <!--     <td  colspan="2"><abstract id="abstract10" style="display:none;"> Abstract</abstract></td> -->
+                <!-- </tr> -->
+                <tr> <td colspan="2">&nbsp;</td> </tr>
+                <tr>
+                    <td style="text-align:right">4:00pm</td>
+                    <td>Nicholas Beaton</td>
+                </tr>
+                <tr>
+                    <td  colspan="2"><em> 
+                            <a href="javascript: void(0);" onclick="toggle('abstract9911')">
+                                The powered Catalan numbers
+                            </a> 
+                    </em></td>
+                </tr>
+                <tr>
+                    <td  colspan="2"><abstract id="abstract9911" style="display:none;"> 
+                        Much of Richard&rsquo;s most recent research was dedicated to
+                        understanding bijections between different
+                        combinatorial structures. In work with Mathilde Bouvel,
+                        Veronica Guerrini and Simone Rinaldi we studied a
+                        sequence which we called the &ldquo;powered Catalan numbers&rdquo;
+                        (<a href="https://oeis.org/A113227">OEIS A113227</a>) which count, among other things, several
+                        different classes of vincular pattern-avoiding
+                        permutations, a class of pattern-avoiding inversion
+                        sequences, two classes of (partially) directed lattice
+                        paths, and a class of labelled trees. I will discuss
+                        some of these objects and the various bijections
+                        between them.
+                        </abstract></td>
+                </tr>
+                <tr> <td colspan="2">&nbsp;</td> </tr>
+                <tr>
+                    <td style="text-align:right">4:30pm</td>
+                    <td>Jan de Gier</td>
+                </tr>
+                <tr>
+                    <td  colspan="2"><em> 
+                            <!-- <a href="javascript: void(0);" onclick="toggle('abstract12')"> -->
+                                TBA
+                            <!-- </a> --> 
+                    </em></td>
+                </tr>
+                <!-- <tr> -->
+                <!--     <td  colspan="2"><abstract id="abstract12" style="display:none;"> Abstract</abstract></td> -->
+                <!-- </tr> -->
+                <tr> <td colspan="2">&nbsp;</td> </tr>
+                <tr bgcolor="#E0E0E0">
+                    <td  style="text-align:right">5:00pm</td>
+                    <td colspan="1"> Closing remarks</td>
+                </tr>
+            </table>
+        </div> <!-- mobile -->
 
             <br />
             <br />
