--- a/brak/index.html
+++ b/brak/index.html
@@ -33,7 +33,7 @@
                 10px" />
                 </div>
 
-                <div>
+                <div class="desktop">
                     <h3>
                         <a href="register">Register</a>
                         &nbsp;&nbsp;
@@ -41,6 +41,13 @@
                         <a href="program">Program</a>
                         &nbsp;&nbsp;
                         &nbsp;&nbsp;
+                        <a href="photos">Photos</a>
+                    </h3>
+                </div>
+                <div class="mobile">
+                    <h3>
+                        <a href="register">Register</a><br/>
+                        <a href="program">Program</a><br/>
                         <a href="photos">Photos</a>
                     </h3>
                 </div>
