changed reg form width to 100%

--- a/brak/register/index.html
+++ b/brak/register/index.html
@@ -52,7 +52,7 @@
             <br />
             <iframe
                 src="https://docs.google.com/forms/d/e/1FAIpQLSdxrbvLzj019OJGdxrCUDiEWK5_W4cuO5GOCfJwzvD0gjN9FQ/viewform?embedded=true"
-                width="800" height="2000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                width="100%" height="2000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div> <!-- content -->
         </div> <!-- contentblock -->
         <div id="push"></div>
