overthinking things here: toggle abstract view now works when transitioning between mobile and desktop

--- a/brak/program/index.html
+++ b/brak/program/index.html
@@ -101,7 +101,7 @@
                     <td style="text-align:right">9:30am</td>
                     <td>Stuart Whittington</td>
                     <td><em> 
-                            <a href="javascript: void(0);" onclick="toggle('abstract6')">
+                            <a href="javascript: void(0);" onclick="toggle('abstract6');toggle('abstract996')">
                                 Self-avoiding walks interacting with a surface and subject to a force
                             </a> 
                     </em></td>
@@ -124,7 +124,7 @@
                     <td style="text-align:right">10:00am</td>
                     <td>E. J. Janse van Rensburg</td>
                     <td><em> 
-                            <a href="javascript: void(0);" onclick="toggle('abstract2')">
+                            <a href="javascript: void(0);" onclick="toggle('abstract2');toggle('abstract992')">
                                 Pulling spiders
                             </a> 
                     </em></td>
@@ -199,7 +199,7 @@
                     <td style="text-align:right">2:00pm</td>
                     <td>Tony Guttmann</td>
                     <td><em> 
-                            <a href="javascript: void(0);" onclick="toggle('abstract8')">
+                            <a href="javascript: void(0);" onclick="toggle('abstract8');toggle('abstract998')">
                                 Spiral walks on the triangular lattice
                             </a> 
                     </em></td>
@@ -248,7 +248,7 @@
                     <td style="text-align:right">4:00pm</td>
                     <td>Nicholas Beaton</td>
                     <td><em> 
-                            <a href="javascript: void(0);" onclick="toggle('abstract11')">
+                            <a href="javascript: void(0);" onclick="toggle('abstract11');toggle('abstract9911')">
                                 The powered Catalan numbers
                             </a> 
                     </em></td>
@@ -336,7 +336,7 @@
                 </tr>
                 <tr>
                     <td  colspan="2"><em> 
-                            <a href="javascript: void(0);" onclick="toggle('abstract996')">
+                            <a href="javascript: void(0);" onclick="toggle('abstract6');toggle('abstract996')">
                                 Self-avoiding walks interacting with a surface and subject to a force
                             </a> 
                     </em></td>
@@ -361,7 +361,7 @@
                 </tr>
                 <tr>
                     <td  colspan="2"><em> 
-                            <a href="javascript: void(0);" onclick="toggle('abstract992')">
+                            <a href="javascript: void(0);" onclick="toggle('abstract2');toggle('abstract992')">
                                 Pulling spiders
                             </a> 
                     </em></td>
@@ -448,7 +448,7 @@
                 </tr>
                 <tr>
                     <td  colspan="2"><em> 
-                            <a href="javascript: void(0);" onclick="toggle('abstract998')">
+                            <a href="javascript: void(0);" onclick="toggle('abstract8');toggle('abstract998')">
                                 Spiral walks on the triangular lattice
                             </a> 
                     </em></td>
@@ -505,7 +505,7 @@
                 </tr>
                 <tr>
                     <td  colspan="2"><em> 
-                            <a href="javascript: void(0);" onclick="toggle('abstract9911')">
+                            <a href="javascript: void(0);" onclick="toggle('abstract11');toggle('abstract9911')">
                                 The powered Catalan numbers
                             </a> 
                     </em></td>
