added judy-anne's abstract

--- a/brak/program/index.html
+++ b/brak/program/index.html
@@ -186,15 +186,17 @@
                     <td style="text-align:right">1:30pm</td>
                     <td>Judy-anne Osborn</td>
                     <td><em> 
-                            <!-- <a href="javascript: void(0);" onclick="toggle('abstract7')"> -->
-                                TBA
-                            <!-- </a> --> 
+                            <a href="javascript: void(0);" onclick="toggle('abstract7');toggle('abstract997')">
+                                Richard Brak as role model
+                            </a> 
                     </em></td>
                 </tr>
-                <!-- <tr> -->
-                <!--     <td></td> -->
-                <!--     <td  colspan="2"><abstract id="abstract7" style="display:none;"> Abstract</abstract></td> -->
-                <!-- </tr> -->
+                <tr>
+                    <td></td>
+                    <td  colspan="2"><abstract id="abstract7" style="display:none;"> 
+                        Richard Brak was my PhD supervisor, and the best role model I could think of for a young academic, or any academic.  I will reflect on some of what I learnt from him, how the world and academia is the richer for his having been in it, and some of what I see as his legacy.
+                        </abstract></td>
+                </tr>
                 <tr>
                     <td style="text-align:right">2:00pm</td>
                     <td>Tony Guttmann</td>
@@ -433,14 +435,21 @@
                 </tr>
                 <tr>
                     <td  colspan="2"><em> 
-                            <!-- <a href="javascript: void(0);" onclick="toggle('abstract7')"> -->
-                                TBA
-                            <!-- </a> --> 
+                            <a href="javascript: void(0);" onclick="toggle('abstract7');toggle('abstract997')">
+                                Richard Brak as role model
+                            </a> 
                     </em></td>
                 </tr>
-                <!-- <tr> -->
-                <!--     <td  colspan="2"><abstract id="abstract7" style="display:none;"> Abstract</abstract></td> -->
-                <!-- </tr> -->
+                <tr>
+                    <td  colspan="2"><abstract id="abstract997" style="display:none;"> 
+                        Richard Brak was my PhD supervisor, and the best role
+                        model I could think of for a young academic, or any
+                        academic.  I will reflect on some of what I learnt from
+                        him, how the world and academia is the richer for his
+                        having been in it, and some of what I see as his
+                        legacy.
+                        </abstract></td>
+                </tr>
                 <tr> <td colspan="2">&nbsp;</td> </tr>
                 <tr>
                     <td style="text-align:right">2:00pm</td>
